--- a/docs/PacketFence_Clustering_Guide.asciidoc
+++ b/docs/PacketFence_Clustering_Guide.asciidoc
@@ -37,7 +37,11 @@ Installing packages
 First, you will need to install Percona Xtrabackup for the synchronization to work correctly.
 
   # yum install http://www.percona.com/downloads/percona-release/redhat/0.1-3/percona-release-0.1-3.noarch.rpm
-  # yum install percona-xtrabackup socat
+
+Disable Percona repositories, so that installing software from that repository requires explicit action.
+
+  # sed -i 's/enabled = 1/enabled = 0/g' /etc/yum.repos.d/percona-release.repo
+  # yum install percona-xtrabackup socat --enablerepo=percona-release-x86_64
 
 If you use the `/usr/local/pf/addons/database-backup-and-maintenance.sh` script, this will have enabled the Percona Xtrabackup mode. In order for the backups to still work correctly, you should configure your installation as described in section '15.3.6. Using Percona XtraBackup' of the Administration guide.
 
@@ -45,6 +49,7 @@ Configuring Galera
 ^^^^^^^^^^^^^^^^^^
 
 For the next steps, you want to make sure that you didn't configure anything in `/usr/local/pf/conf/cluster.conf`. If you already did, comment all the configuration in the file and do a configreload (`/usr/local/pf/bin/pfcmd configreload hard`).
+
 
 Setup on the first server of your cluster
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -59,7 +64,7 @@ Then, secure your installation
 
 Then, you will need to create a user for the database replication that PacketFence will use. You can use any username/password combination. After creating the user, keep its information close-by for usage in the configuration.
 
-  mysql -u root -p
+  # mysql -u root -p
 
     mysql> CREATE USER 'pfcluster'@'%' IDENTIFIED BY 'aMuchMoreSecurePassword';
     mysql> GRANT RELOAD, LOCK TABLES, REPLICATION CLIENT, SUPER ON *.* TO 'pfcluster'@'%';
@@ -70,6 +75,8 @@ Then, you will need to create a user for the database replication that PacketFen
     mysql> FLUSH PRIVILEGES;
 
 Next, you need to remove the empty users from your MySQL database:
+
+#TODO WHY?
 
   # mysql -u root -p
     mysql> delete from mysql.user where user = '' ;
@@ -88,12 +95,22 @@ On all your servers, add the following line in `/etc/sysctl.conf` and then reloa
 
 Then, disable the default MariaDB systemd service unit as PacketFence already provides one (packetfence-mariadb)
 
-  # systemctl disable packetfence-mariadb
+  # systemctl disable mariadb
 
 Now, on the first server, create the PEM that combines the key and certificate for the http services. Adapt to your own paths if you are using different certificates. What matters is that the path to the PEM file should be /usr/local/pf/conf/ssl/server.pem since HAProxy will expect it to be there.
 
   # cd /usr/local/pf/conf/ssl
   # cat server.key server.crt > server.pem
+
+Going through the configurator
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
+Now, on the first server of your cluster, you should go through the configurator, configuring the server as if it was in standalone (no HA interfaces). You should leave the services stopped at the end of the configurator.
+
+On the other servers of your cluster, configure only the network interfaces without going past that section in the configurator. If the other servers already have the right IP addresses configured on their interfaces, you can ignore this step.
+
+Step 3 : Create a new cluster
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 PacketFence Configuration Modification
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
@@ -127,18 +144,12 @@ Now, reload the configuration and restart packetfence-config. You will see error
 
   # service packetfence-config restart
   # /usr/local/pf/bin/pfcmd configreload hard
+  # service packetfence-haproxy start
 
-Going through the configurator
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+Configure cluster.conf
+^^^^^^^^^^^^^^^^^^^^^^
 
-Now, on the first server of your cluster, you should go through the configurator, configuring the server as if it was in standalone (no HA interfaces). You should leave the services stopped at the end of the configurator.
-
-On the other servers of your cluster, configure only the network interfaces without going past that section in the configurator. If the other servers already have the right IP addresses configured on their interfaces, you can ignore this step.
-
-Step 3 : Create a new cluster
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-In order to create a new cluster, you need to configure `/usr/local/pf/conf/cluster.conf`
+In order to create a new cluster, you need to configure `/usr/local/pf/conf/cluster.conf` on the first server of your cluster.
 
 You will need to configure it with your server hostname. To get it use : *hostname* in a command line.
 
@@ -264,6 +275,7 @@ Now, you will need to integrate your 2 other nodes in your cluster.
 
 Webservices configuration
 ^^^^^^^^^^^^^^^^^^^^^^^^^
+TODO: no currently-at, so need to point at admin directly.
 
 First, set the webservices user and password on the master node in 'Configuration/Web Services'. There should be a sync error you can safely ignore as the other servers of your cluster aren't joined yet.
 
