--- a/docs/PacketFence_Clustering_Guide.asciidoc
+++ b/docs/PacketFence_Clustering_Guide.asciidoc
@@ -277,7 +277,8 @@ Now, you will need to integrate your 2 other nodes in your cluster.
 
 Webservices configuration
 ^^^^^^^^^^^^^^^^^^^^^^^^^
-TODO: no currently-at, so need to point at admin directly.
+
+NOTE: If you access https://PF_HOSTNAME:1443, you will still be redirected to the configurator. In order to gain access to the full administration interface, open https://PF_HOSTNAME:1443/admin
 
 First, set the webservices user and password on the master node in 'Configuration/Web Services'. There should be a sync error you can safely ignore as the other servers of your cluster aren't joined yet.
 
