--- a/docs/PacketFence_Clustering_Guide.asciidoc
+++ b/docs/PacketFence_Clustering_Guide.asciidoc
@@ -649,3 +649,192 @@ Apply the last two steps for any other interface you have on your server. Keep i
 
 Now, reboot your server and when it finishes starting, your interfaces name should now be using the format `ethX`
 
+Performing an upgrade on a cluster
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+CAUTION: Performing a live upgrade on a PacketFence cluster is not a straightforward operation and should be done meticulously. 
+
+In this procedure, the 3 nodes will be named A, B and C and they are in this order in `cluster.conf`.
+
+Backups
+^^^^^^^
+
+First, ensure you have taken backups of your data. We highly encourage you to perform snapshots of all the virtual machines prior to the upgrade. You should also take a backup of the database and the `/usr/local/pf` directory using:
+
+  # mysqldump --opt -u root -p pf | gzip > /root/packetfence_db.sql.gz
+  # tar -C /usr/local -czf /root/packetfence.tar.gz pf --exclude='pf/logs' --exclude='pf/var'
+
+Upgrading node C
+^^^^^^^^^^^^^^^^
+
+In order to be able to work on node C, we first need to stop all the PacketFence application services on it.
+
+  # /usr/local/pf/bin/pfcmd service pf stop
+
+Next, upgrade your operating system and PacketFence on node C:
+
+  # yum upgrade --enablerepo=packetfence
+
+NOTE: If you reboot your server during this procedure, make sure you set the systemd target to multi-user before rebooting and back to packetfence-cluster after it boots up. This will make sure your services don't start up after the reboot.
+
+Now, make sure you follow the directives in the upgrade guide (UPGRADE.asciidoc) as you would on a standalone server with the exception of the database schema updates.
+
+Migrating service on node C
+^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
+Node C should currently be running the latest version of PacketFence while A and B should still be running the older version and still be offering service. The database is also still being synced to node C via the packetfence-mariadb service.
+
+NOTE: The steps below will cause a temporary loss of service.
+
+Detach node C from the cluster
+++++++++++++++++++++++++++++++
+
+First, we need to tell A and B to ignore C in their cluster configuration. In order to do so, execute the following command **on A and B** while changing `node-C-hostname` with the actual hostname of node C:
+
+  # /usr/local/pf/bin/pfcmd cluster node-C-hostname disable
+
+Once this is done proceed to restart the following services node A and B **one at a time**. This will cause service failure during the restart on node A
+
+  # /usr/local/pf/bin/pfcmd service haproxy restart
+  # /usr/local/pf/bin/pfcmd service keepalived restart
+  # service packetfence-mariadb restart 
+
+Then, we should tell C to ignore A and B in their cluster configuration. In order to do so, execute the following commands on node C while changing `node-A-hostname` and `node-B-hostname` by the hostname of node A and B respectively.
+
+  # /usr/local/pf/bin/pfcmd cluster node-A-hostname disable
+  # /usr/local/pf/bin/pfcmd cluster node-B-hostname disable
+
+NOTE: From this moment on, you will lose the configuration changes and data changes that occur on node A and B.
+
+The commands above will make sure that node A and B will not be forwarding requests to C even if it is alive. Same goes for C which won't be sending traffic to A and B. This includes application traffic (RADIUS, HTTP, ...) as well as database replication traffic. This means A and B will continue to have the same database informations while C will start to diverge from it when it goes live. We'll make sure to reconcile this data afterwards.
+
+Complete upgrade of node C
+++++++++++++++++++++++++++
+
+From that moment node C is in standalone for its database. We can proceed to update the database schema so it matches the one of the latest version.
+In order to do so, upgrade the database schema using the instructions provided in UPGRADE.asciidoc.
+
+Stop service on nodes A and B
++++++++++++++++++++++++++++++
+
+Next, stop all application service on node A and B along with the database:
+
+  # /usr/local/pf/bin/pfcmd service pf stop
+  # service packetfence-mariadb stop
+
+Start service on node C
++++++++++++++++++++++++
+
+Now, start the application service on node C
+
+  # /usr/local/pf/bin/pfcmd service pf start
+
+Validate migration
+^^^^^^^^^^^^^^^^^^
+
+You should now have full service on node C and should validate that all functionnalities are working as expected. Once you continue past this point, there will be no way to migrate back to nodes A and B in case of issues other than to use the snapshots taken prior to the upgrade.
+
+If all goes wrong
++++++++++++++++++
+
+If your migration to node C goes wrong, you can fail back to nodes A and B by stopping all services on node C and starting them on nodes A and B
+
+**On node C**
+
+  # service packetfence-mariadb stop
+  # /usr/local/pf/bin/pfcmd service pf stop
+
+**On nodes A and B**
+
+  # service packetfence-mariadb start
+  # /usr/local/pf/bin/pfcmd service pf start
+
+Note that it may take up to 5 minutes for service to recover as node A has to self-elect itself as the database master.
+
+Once you are feeling confident to try your failover to node C again, you can do the exact opposite of the commands above to try your upgrade again.
+
+If all goes well
+++++++++++++++++
+
+If you are happy about the state of your upgrade, you can continue on the steps below in order to complete the upgrade of the two remaining nodes.
+
+Upgrading nodes A and B
+^^^^^^^^^^^^^^^^^^^^^^^
+
+Next, upgrade your operating system and PacketFence on each server:
+
+  # yum upgrade --enablerepo=packetfence
+
+NOTE: If you reboot your server during this procedure, make sure you set the systemd target to multi-user before rebooting and back to packetfence-cluster after it boots up. This will make sure your services don't start up after the reboot.
+
+You do not need to follow the upgrade procedure when upgrading these nodes. You should instead do a sync from node C from nodes A and B
+
+  # /usr/local/pf/bin/cluster/sync --from=192.168.1.5 --api-user=packet --api-password=fence
+
+Where : 
+
+* '192.168.1.5' is the management IP of node C
+* 'packet' is the webservices username (Configuration->Webservices)
+* 'fence' is the webservices password (Configuration->Webservices)
+
+Reintegrating nodes A and B
+^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
+Optional step: Cleaning up data on node C
++++++++++++++++++++++++++++++++++++++++++
+
+When you will re-establish a cluster using node C in the steps below, your environment will be set in read-only mode for the duration of the database sync (which needs to be done from scratch).
+
+This can take from a few minutes to an hour depending on your database size.
+
+We highly suggest you delete data from the following tables if you don't need it:
+
+* radius_audit_log: contains the data in Auditing->RADIUS Audit Log
+* ip4log_history: Archiving data for the IPv4 history
+* ip4log_archive: Archiving data for the IPv4 history
+* locationlog_archive: Archiving data for the node location history
+
+You can safely delete the data from all of these tables without affecting the functionnalities as they are used for reporting and archiving purposes. Deleting the data from these tables can make the sync process considerably faster.
+
+In order to truncate a table:
+
+  # mysql -u root -p pf
+  mysql> truncate TABLE_NAME;
+
+Elect node C as database master
++++++++++++++++++++++++++++++++
+
+CAUTION: After this step and until at least one of the other servers is synced with node C, the database will be in read-only mode.
+
+In order for node C to be able to elect itself as database master, we must tell it there are other members in its cluster by re-enabling node A and B in its cluster configuration
+
+  # /usr/local/pf/bin/pfcmd cluster node-A-hostname enable
+  # /usr/local/pf/bin/pfcmd cluster node-B-hostname enable
+
+Now, stop packetfence-mariadb on node C (`service packetfence-mariadb stop`) and elect node C as the master using `/usr/local/pf/sbin/pf-mariadb --force-new-cluster` and leave the process in foreground. 
+
+You should validate that you are able to connect to the MySQL database even though it is in read-only mode using the MySQL command line. If its not, make sure you check the MySQL log (`/var/lib/mysql/PF_HOSTNAME.err`)
+
+Sync node A and B
++++++++++++++++++
+
+On each of the servers you want to discard the data from, you must destroy all the data in `/var/lib/mysql` and start packetfence-mariadb so it resyncs its data from scratch.
+
+  rm -fr /var/lib/mysql/*
+  service packetfence-mariadb start
+
+Once one of the node has completed syncing (try connecting to it using the MySQL command line), then you can break the cluster election command you have running on node C and start node C normally (using `service packetfence-mariadb start`).
+
+Should there be any issues during the sync, make sure you look into the MySQL log (`/var/lib/mysql/PF_HOSTNAME.err`)
+
+Start node A and B
+++++++++++++++++++
+
+You can now safely start PacketFence on node A and B using:
+
+  # /usr/local/pf/bin/pfcmd service pf start
+
+You should now have full service on all 3 nodes using the latest version of PacketFence.
+
+
+
