--- a/docs/PacketFence_Clustering_Guide.asciidoc
+++ b/docs/PacketFence_Clustering_Guide.asciidoc
@@ -352,7 +352,7 @@ Wrapping up
 
 Now start packetfence
 
-  # /usr/local/pf/bin/pfcmd service pf start
+  # systemctl isolate packetfence-cluster
 
 Next, make sure to join domains through 'Configuration/Domains' on each node.
 
@@ -710,16 +710,19 @@ Once this is done proceed to restart the following services on nodes A and B **o
 
   # /usr/local/pf/bin/pfcmd service haproxy restart
   # /usr/local/pf/bin/pfcmd service keepalived restart
-  # service packetfence-mariadb restart 
 
 Then, we should tell C to ignore A and B in their cluster configuration. In order to do so, execute the following commands on node C while changing `node-A-hostname` and `node-B-hostname` by the hostname of nodes A and B respectively.
 
   # /usr/local/pf/bin/cluster/node node-A-hostname disable
   # /usr/local/pf/bin/cluster/node node-B-hostname disable
   
-And restart packetfence-mariadb so it runs without being in the cluster
+Now on packetfence-mariadb on all nodes
 
-  # service packetfence-mariadb restart 
+  # service packetfence-mariadb stop
+
+Then start them in the following order: A then B then C
+  
+  # service packetfence-mariadb start
 
 NOTE: From this moment on, you will lose the configuration changes and data changes that occur on nodes A and B.
 
@@ -744,7 +747,7 @@ Start service on node C
 
 Now, start the application service on node C
 
-  # /usr/local/pf/bin/pfcmd service pf start
+  # systemctl isolate packetfence-cluster
 
 Validate migration
 ^^^^^^^^^^^^^^^^^^
@@ -764,7 +767,7 @@ If your migration to node C goes wrong, you can fail back to nodes A and B by st
 **On nodes A and B**
 
   # service packetfence-mariadb start
-  # /usr/local/pf/bin/pfcmd service pf start
+  # systemctl isolate packetfence-cluster
 
 Note that it may take up to 5 minutes for service to recover as node A has to self-elect itself as the database master.
 
@@ -782,7 +785,7 @@ Next, upgrade your operating system and PacketFence on each server:
 
   # yum upgrade --enablerepo=packetfence
 
-NOTE: If you reboot your server during this procedure, make sure you set the systemd target to multi-user before rebooting and back to packetfence-cluster after it boots up. This will make sure your services don't start up after the reboot.
+NOTE: If you reboot your server during this procedure, make sure you set the systemd target to multi-user (`systemctl set-default multi-user.target`) before rebooting and back to packetfence-cluster (`systemctl set-default packetfence-cluster.target`) after it boots up. This will make sure your services don't start up after the reboot.
 
 You do not need to follow the upgrade procedure when upgrading these nodes. You should instead do a sync from node C on nodes A and B
 
@@ -821,12 +824,14 @@ In order to truncate a table:
 Elect node C as database master
 +++++++++++++++++++++++++++++++
 
-CAUTION: After this step and until at least one of the other servers is synced with node C, the database will be in read-only mode.
-
-In order for node C to be able to elect itself as database master, we must tell it there are other members in its cluster by re-enabling nodes A and B in its cluster configuration
+In order for node C to be able to elect itself as database master, we must tell it there are other members in its cluster by re-enabling nodes A and B
 
   # /usr/local/pf/bin/cluster/node node-A-hostname enable
   # /usr/local/pf/bin/cluster/node node-B-hostname enable
+
+Next, enable node C on nodes A and B by executing the following command on the two servers:
+
+  # /usr/local/pf/bin/cluster/node node-C-hostname enable
 
 Now, stop packetfence-mariadb on node C (`service packetfence-mariadb stop`) and elect node C as the master using `/usr/local/pf/sbin/pf-mariadb --force-new-cluster` and leave the process in foreground. 
 
@@ -837,8 +842,8 @@ Sync nodes A and B
 
 On each of the servers you want to discard the data from, you must destroy all the data in `/var/lib/mysql` and start packetfence-mariadb so it resyncs its data from scratch.
 
-  rm -fr /var/lib/mysql/*
-  service packetfence-mariadb start
+  # rm -fr /var/lib/mysql/*
+  # service packetfence-mariadb start
 
 Should there be any issues during the sync, make sure you look into the MySQL log (`/var/lib/mysql/PF_HOSTNAME.err`)
 
@@ -849,7 +854,7 @@ Start nodes A and B
 
 You can now safely start PacketFence on nodes A and B using:
 
-  # /usr/local/pf/bin/pfcmd service pf start
+  # systemctl isolate packetfence-cluster
 
 You should now have full service on all 3 nodes using the latest version of PacketFence.
 
