--- a/docs/PacketFence_Clustering_Guide.asciidoc
+++ b/docs/PacketFence_Clustering_Guide.asciidoc
@@ -688,7 +688,7 @@ Next, upgrade your operating system and PacketFence on node C:
 
   # yum upgrade --enablerepo=packetfence
 
-NOTE: If you reboot your server during this procedure, make sure you set the systemd target to multi-user before rebooting and back to packetfence-cluster after it boots up. This will make sure your services don't start up after the reboot.
+NOTE: If you reboot your server during this procedure, make sure you set the systemd target to multi-user (`systemctl set-default multi-user.target`) before rebooting and back to packetfence-cluster (`systemctl set-default packetfence-cluster.target`) after it boots up. This will make sure your services don't start up after the reboot.
 
 Now, make sure you follow the directives in the upgrade guide (UPGRADE.asciidoc) as you would on a standalone server with the exception of the database schema updates.
 
