--- a/docs/PacketFence_SentinelOne_Quick_Install_Guide.asciidoc
+++ b/docs/PacketFence_SentinelOne_Quick_Install_Guide.asciidoc
@@ -1,5 +1,5 @@
-SentineOne Quick Integration Guide
-==================================
+SentinelOne Quick Integration Guide
+===================================
 :encoding: UTF-8
 :lang: en
 :doctype: book
